--- a/brand.html
+++ b/brand.html
@@ -3,7 +3,7 @@
 <head> 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" >
 	<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' >
-	<title>首頁</title> 
+	<title>品牌</title> 
 	<link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap2.3.2/css/bootstrap.css" >
  	<link rel="stylesheet" type="text/css" media="all" href="style.css" >
 	<meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=0.6, maximum-scale=3.0" >
