我是笨蛋，push到舊的code

--- a/about_comlink.html
+++ b/about_comlink.html
@@ -20,10 +20,8 @@
 	<div class="container">
 		<div class="header">
 			<div class="row">
-				<div class="span2">
-					<a href="#"><img src="http://dummyimage.com/120x100/000/fff.png" class="img-polaroid"/></a>
-				</div>
-				<div class="span10 clearfix">
+				<div class="span3"><a href="#"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
+				<div class="span9 clearfix">
 					<div class="pull-left">
 						<ul class="unstyled">
 							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
@@ -51,7 +49,12 @@
 				</div>
 				<div class="span8 left-dash-border">
 					<div class="margin-top-20 margin-left-20">
-						<img src="http://dummyimage.com/450x200/000/fff.png" />
+						<img src="http://placekitten.com/620/200" />
+						<h3>about_comlink</h3>
+						<p>Nullam quligula, eget lacinia odio sem nec llam quligula, eget lacinia odio sem nec elitllam quligula, eget lacinia odio sem nec elitelit</p>
+					</div>
+					<div class="margin-top-20 margin-left-20">
+						<img src="http://placekitten.com/620/200" />
 						<h3>about_comlink</h3>
 						<p>Nullam quligula, eget lacinia odio sem nec llam quligula, eget lacinia odio sem nec elitllam quligula, eget lacinia odio sem nec elitelit</p>
 					</div>
