--- a/brand.html
+++ b/brand.html
@@ -20,10 +20,8 @@
 	<div class="container">
 		<div class="header">
 			<div class="row">
-				<div class="span2">
-					<a href="#"><img src="http://dummyimage.com/120x100/000/fff.png" class="img-polaroid"/></a>
-				</div>
-				<div class="span10 clearfix">
+				<div class="span3"><a href="#"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
+				<div class="span9 clearfix">
 					<div class="pull-left">
 						<ul class="unstyled">
 							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
@@ -52,7 +50,7 @@
 				<div class="span8 left-dash-border">
 					<div class="row margin-top-20 margin-left-20">
 						<div class="span3">
-							<a href="#"><img src="http://dummyimage.com/200x200/000/fff.png" /></a>
+							<a href="#"><img src="http://placekitten.com/220/200" /></a>
 						</div>
 						<div class="span4">
 							<h3>子項目標題</h3>
@@ -62,7 +60,7 @@
 					<hr class="dashed-hr margin-bottom-none"></hr>
 					<div class="row margin-top-20 margin-left-20">
 						<div class="span3">
-							<a href="#"><img src="http://dummyimage.com/200x200/000/fff.png" /></a>
+							<a href="#"><img src="http://placekitten.com/220/200" /></a>
 						</div>
 						<div class="span4">
 							<h3>子項目標題</h3>
@@ -72,7 +70,7 @@
 					<hr class="dashed-hr margin-bottom-none"></hr>
 					<div class="row margin-top-20 margin-left-20">
 						<div class="span3">
-							<a href="#"><img src="http://dummyimage.com/200x200/000/fff.png" /></a>
+							<a href="#"><img src="http://placekitten.com/220/200" /></a>
 						</div>
 						<div class="span4">
 							<h3>子項目標題</h3>
@@ -82,7 +80,7 @@
 					<hr class="dashed-hr margin-bottom-none"></hr>
 					<div class="row margin-top-20 margin-left-20">
 						<div class="span3">
-							<a href="#"><img src="http://dummyimage.com/200x200/000/fff.png" /></a>
+							<a href="#"><img src="http://placekitten.com/220/200" /></a>
 						</div>
 						<div class="span4">
 							<h3>子項目標題</h3>
