--- a/main.html
+++ b/main.html
@@ -20,10 +20,8 @@
 	<div class="container">
 		<div class="header">
 			<div class="row">
-				<div class="span2">
-					<a href="#"><img src="http://dummyimage.com/120x100/000/fff.png" class="img-polaroid"/></a>
-				</div>
-				<div class="span10 clearfix">
+				<div class="span3"><a href="#"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
+				<div class="span9 clearfix">
 					<div class="pull-left">
 						<ul class="unstyled">
 							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
@@ -39,14 +37,14 @@
 		<hr class="dashed-hr"></hr>
 		<div class="main-content">
 			<div class="main-carousel">
-				<img src="http://dummyimage.com/960x500/000/fff.png" />
+				<img src="http://placekitten.com/940/300" />
 			</div>
 			<hr class="dashed-hr margin-bottom-none"></hr>
 			<div class="row">
 				<div class="span6">
 					<div class="row margin-top-20">
 						<div class="span3">
-							<a href="#"><img src="http://dummyimage.com/220x150/000/fff.png" /></a>
+							<a href="#"><img src="http://placekitten.com/220/150" /></a>
 						</div>
 						<div class="span3">
 							<a href="#"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
@@ -56,7 +54,7 @@
 				<div class="span6">
 					<div class="row margin-top-20">
 						<div class="span3">
-							<a href="#"><img src="http://dummyimage.com/220x150/000/fff.png" /></a>
+							<a href="#"><img src="http://placekitten.com/220/150" /></a>
 						</div>
 						<div class="span3">
 							<a href="#"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
@@ -73,10 +71,10 @@
 				<div class="span4 offset2">
 					<h4>where to buy</h4>
 					<div class="row">
-						<div class="span1"><a href="#"><img src="http://dummyimage.com/50x50/000/fff.png" /></a></div>
-						<div class="span1"><a href="#"><img src="http://dummyimage.com/50x50/000/fff.png" /></a></div>
-						<div class="span1"><a href="#"><img src="http://dummyimage.com/50x50/000/fff.png" /></a></div>
-						<div class="span1"><a href="#"><img src="http://dummyimage.com/50x50/000/fff.png" /></a></div>
+						<div class="span1"><a href="#"><img src="http://placekitten.com/60/50" /></a></div>
+						<div class="span1"><a href="#"><img src="http://placekitten.com/60/50" /></a></div>
+						<div class="span1"><a href="#"><img src="http://placekitten.com/60/50" /></a></div>
+						<div class="span1"><a href="#"><img src="http://placekitten.com/60/50" /></a></div>
 					</div>
 				</div>
 			</div>
