--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head> 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" >
 	<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' >
-	<title>附點品牌</title> 
+	<title>品牌</title> 
 	<link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap2.3.2/css/bootstrap.css" >
  	<link rel="stylesheet" type="text/css" media="all" href="style.css" >
 	<meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=0.6, maximum-scale=3.0" >
@@ -34,33 +34,31 @@
 				</div>
 			</div>
 		</div>
+		<hr class="dashed-hr"></hr>
 		<div class="main-content">
-			<hr class="dashed-hr margin-bottom-none"></hr>
-			<div class="row">
-				<div class="span3">
-					<h3>附點品牌</h3>
-					<ul class="unstyled">
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-					</ul>
+			<div class="row margin-top-20">
+				<div class="span2">2013.05.24</div>
+				<div class="span8">
+					<img src="http://placekitten.com/700/100">
+					<p>因驚讓緊手安義充觀進利風新爸路黃過，斯老太黑命面金運話，山破了際、廣調樣說至力又以叫有市位的線。都十所合日員求，山科留三飛主格飯呢、樹同告道才媽們此看統車電去一想國了過？</p>
 				</div>
-				<div class="span8 left-dash-border">
-					<div class="margin-top-20 margin-left-20">
-						<img src="http://placekitten.com/620/200" />
-						<h3>子標題</h3>
-						<p>Nullam quligula, eget lacinia odio sem nec llam quligula, eget lacinia odio sem nec elitllam quligula, eget lacinia odio sem nec elitelit</p>
-					</div>
-					<div class="margin-top-20 margin-left-20">
-						<img src="http://placekitten.com/620/200" />
-						<h3>子標題</h3>
-						<p>Nullam quligula, eget lacinia odio sem nec llam quligula, eget lacinia odio sem nec elitllam quligula, eget lacinia odio sem nec elitelit</p>
-					</div>
+			</div>
+			<div class="row margin-top-20">
+				<div class="span2">2013.05.24</div>
+				<div class="span8">
+					<img src="http://placekitten.com/700/100">
+					<p>因驚讓緊手安義充觀進利風新爸路黃過，斯老太黑命面金運話，山破了際、廣調樣說至力又以叫有市位的線。都十所合日員求，山科留三飛主格飯呢、樹同告道才媽們此看統車電去一想國了過？</p>
+				</div>
+			</div>
+			<div class="row margin-top-20">
+				<div class="span2">2013.05.24</div>
+				<div class="span8">
+					<img src="http://placekitten.com/700/100">
+					<p>因驚讓緊手安義充觀進利風新爸路黃過，斯老太黑命面金運話，山破了際、廣調樣說至力又以叫有市位的線。都十所合日員求，山科留三飛主格飯呢、樹同告道才媽們此看統車電去一想國了過？</p>
 				</div>
 			</div>
 		</div>
+		<hr class="dashed-hr"></hr>
 		<div class="footer clearfix">
 			<div class="row">
 				<div class="span6">
