add product-list.html product-dtl.htl modify else link url

--- a/main.html
+++ b/main.html
@@ -24,11 +24,11 @@
 				<div class="span9 clearfix">
 					<div class="pull-left">
 						<ul class="unstyled">
-							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
-							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
-							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
-							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
-							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
+							<li class="pull-left"><a href="dott_brand.html" class="btn">附點品牌</a></li>
+							<li class="pull-left"><a href="product_list.html" class="btn">產品介紹</a></li>
+							<li class="pull-left"><a href="news.html" class="btn">最新消息</a></li>
+							<li class="pull-left"><a href="buy.html" class="btn">購買通路</a></li>
+							<li class="pull-left"><a href="contact.html" class="btn">聯絡我們</a></li>
 						</ul>
 					</div>
 				</div>
@@ -44,10 +44,10 @@
 				<div class="span6">
 					<div class="row margin-top-20">
 						<div class="span3">
-							<a href="#"><img src="http://placekitten.com/220/150" /></a>
+							<a href="news.html"><img src="http://placekitten.com/220/150" /></a>
 						</div>
 						<div class="span3">
-							<a href="#"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
+							<a href="product_dtl.html"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
 						</div>
 					</div>
 				</div>
@@ -66,15 +66,15 @@
 			<div class="row">
 				<div class="span6">
 					<h4>about Comlink</h4>
-					<a href="#"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
+					<a href="about.html"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
 				</div>
 				<div class="span4 offset2">
 					<h4>where to buy</h4>
 					<div class="row">
-						<div class="span1"><a href="#"><img src="http://placekitten.com/60/50" /></a></div>
-						<div class="span1"><a href="#"><img src="http://placekitten.com/60/50" /></a></div>
-						<div class="span1"><a href="#"><img src="http://placekitten.com/60/50" /></a></div>
-						<div class="span1"><a href="#"><img src="http://placekitten.com/60/50" /></a></div>
+						<div class="span1"><a href="buy.html"><img src="http://placekitten.com/60/50" /></a></div>
+						<div class="span1"><a href="buy.html"><img src="http://placekitten.com/60/50" /></a></div>
+						<div class="span1"><a href="buy.html"><img src="http://placekitten.com/60/50" /></a></div>
+						<div class="span1"><a href="buy.html"><img src="http://placekitten.com/60/50" /></a></div>
 					</div>
 				</div>
 			</div>
