--- a/chart.html
+++ b/chart.html
@@ -24,11 +24,11 @@
 				<div class="span9 clearfix">
 					<div class="pull-left">
 						<ul class="unstyled">
-							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
-							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
-							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
-							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
-							<li class="pull-left"><a href="#" class="btn">附點品牌</a></li>
+							<li class="pull-left"><a href="dott_brand.html" class="btn">附點品牌</a></li>
+							<li class="pull-left"><a href="product_list.html" class="btn">產品介紹</a></li>
+							<li class="pull-left"><a href="news.html" class="btn">最新消息</a></li>
+							<li class="pull-left"><a href="buy.html" class="btn">購買通路</a></li>
+							<li class="pull-left"><a href="contact.html" class="btn">聯絡我們</a></li>
 						</ul>
 					</div>
 				</div>
