--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 	<div class="container">
 		<div class="header">
 			<div class="row">
-				<div class="span3"><a href="#"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
+				<div class="span3"><a href="main.html"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
 				<div class="span9 clearfix">
 					<div class="pull-left">
 						<ul class="unstyled">
@@ -47,17 +47,17 @@
 							<a href="news.html"><img src="http://placekitten.com/220/150" /></a>
 						</div>
 						<div class="span3">
-							<a href="product_dtl.html"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
+							<a href="news.html"><p>這是最新消息cinia odio sem nec elit.……（繼續閱讀）</p></a>
 						</div>
 					</div>
 				</div>
 				<div class="span6">
 					<div class="row margin-top-20">
 						<div class="span3">
-							<a href="#"><img src="http://placekitten.com/220/150" /></a>
+							<a href="product_dtl.html"><img src="http://placekitten.com/220/150" /></a>
 						</div>
 						<div class="span3">
-							<a href="#"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
+							<a href="product_dtl.html"><p>這是產品內頁cinia odio sem nec elit.……（繼續閱讀）</p></a>
 						</div>
 					</div>
 				</div>
