--- a/product_list.html
+++ b/product_list.html
@@ -3,7 +3,7 @@
 <head> 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" >
 	<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' >
-	<title>關於康利金</title> 
+	<title>產品總覽</title> 
 	<link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap2.3.2/css/bootstrap.css" >
  	<link rel="stylesheet" type="text/css" media="all" href="style.css" >
 	<meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=0.6, maximum-scale=3.0" >
@@ -38,25 +38,48 @@
 			<hr class="dashed-hr margin-bottom-none"></hr>
 			<div class="row">
 				<div class="span3">
-					<h3>about_comlink</h3>
+					<h3>產品</h3>
 					<ul class="unstyled">
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
+						<li><a href="product_dtl.html">產品1內頁</a></li>
+						<li><a href="product_dtl.html">產品1內頁</a></li>
+						<li><a href="product_dtl.html">產品1內頁</a></li>
+						<li><a href="product_dtl.html">產品1內頁</a></li>
 					</ul>
 				</div>
 				<div class="span8 left-dash-border">
-					<div class="margin-top-20 margin-left-20">
-						<img src="http://placekitten.com/620/200" />
-						<h3>about_comlink</h3>
-						<p>Nullam quligula, eget lacinia odio sem nec llam quligula, eget lacinia odio sem nec elitllam quligula, eget lacinia odio sem nec elitelit</p>
+					<div class="row margin-top-20 margin-left-10">
+						<div class="span4">
+							<a href="product_dtl.html"><img src="http://placekitten.com/300/150" /></a>
+						</div>
+						<div class="span3">
+							<table class="span3"><tbody>
+								<tr>
+									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
+									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
+								</tr>
+								<tr>
+									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
+									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
+								</tr>
+							</tbody></table>
+						</div>
 					</div>
-					<div class="margin-top-20 margin-left-20">
-						<img src="http://placekitten.com/620/200" />
-						<h3>about_comlink</h3>
-						<p>Nullam quligula, eget lacinia odio sem nec llam quligula, eget lacinia odio sem nec elitllam quligula, eget lacinia odio sem nec elitelit</p>
+					<div class="row margin-top-20 margin-left-10">
+						<div class="span3">
+							<table class="span3"><tbody>
+								<tr>
+									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
+									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
+								</tr>
+								<tr>
+									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
+									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
+								</tr>
+							</tbody></table>
+						</div>
+						<div class="span4">
+							<a href="product_dtl.html"><img src="http://placekitten.com/300/150" /></a>
+						</div>
 					</div>
 				</div>
 			</div>
