--- a/news.html
+++ b/news.html
@@ -20,7 +20,7 @@
 	<div class="container">
 		<div class="header">
 			<div class="row">
-				<div class="span3"><a href="#"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
+				<div class="span3"><a href="main.html"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
 				<div class="span9 clearfix">
 					<div class="pull-left">
 						<ul class="unstyled">
