--- a/product_dtl.html
+++ b/product_dtl.html
@@ -3,7 +3,7 @@
 <head> 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" >
 	<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' >
-	<title>附點品牌</title> 
+	<title>產品介紹</title> 
 	<link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap2.3.2/css/bootstrap.css" >
  	<link rel="stylesheet" type="text/css" media="all" href="style.css" >
 	<meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=0.6, maximum-scale=3.0" >
@@ -20,7 +20,7 @@
 	<div class="container">
 		<div class="header">
 			<div class="row">
-				<div class="span3"><a href="#"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
+				<div class="span3"><a href="main.html"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
 				<div class="span9 clearfix">
 					<div class="pull-left">
 						<ul class="unstyled">
@@ -56,10 +56,10 @@
 						<div class="clearfix">
 							<span>where to buy</span>
 							<ul class="unstyled">
-								<li class="pull-left margin-right-10"><a href="buy.html"><img src="http://placekitten.com/70/80" /></a></li>
-								<li class="pull-left margin-right-10"><a href="buy.html"><img src="http://placekitten.com/70/80" /></a></li>
-								<li class="pull-left margin-right-10"><a href="buy.html"><img src="http://placekitten.com/70/80" /></a></li>
-								<li class="pull-left margin-right-10"><a href="buy.html"><img src="http://placekitten.com/70/80" /></a></li>\
+								<li class="pull-left margin-right-10"><a href="buy.html"><img src="http://placekitten.com/65/65" /></a></li>
+								<li class="pull-left margin-right-10"><a href="buy.html"><img src="http://placekitten.com/65/65" /></a></li>
+								<li class="pull-left margin-right-10"><a href="buy.html"><img src="http://placekitten.com/65/65" /></a></li>
+								<li class="pull-left margin-right-10"><a href="buy.html"><img src="http://placekitten.com/65/65" /></a></li>
 							</ul>
 						</div>
 					</div>
@@ -68,7 +68,7 @@
 			<p>無也層時負市深的心部來被次氣醫度前我一濟以天，眼我去！的上常外該人發生跟以樣以全熱們公時人，是加和片一會了影動一改笑不她，遊腦家所很景、話旅電之來！名能定</p>
 			<textarea class="span12"></textarea>
 			<p>無也層時負市深的心部來被次氣醫度前我一濟以天，眼我去！的上常外該；兩熱年；動目早像雨訴所。不仍的水，斯精另方上從他；試古看於不有病品南代也龍知所究出</p>
-			<span>Message</span>
+			<strong>Message</strong>
 			<hr class="dashed-hr"></hr>
 			<div class="row">
 				<div class="span2"><img src="http://placekitten.com/140/127" /></div>
