首頁主選單，logo，首頁排版，產品列表排版

--- a/product.html
+++ b/product.html
@@ -20,44 +20,44 @@
 	<div class="container">
 		<div class="header">
 			<div class="row">
-				<div class="span3"><a href="main.html"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
-				<div class="span9 clearfix">
-					<div class="pull-left">
-						<ul class="unstyled">
-							<li class="pull-left">
-								<a href="dott_brand.html" class="nav-item">
-									品牌介紹<span>Brand</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="product_list.html" class="nav-item">
-									產品介紹<span>Product</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="news.html" class="nav-item">
-									最新消息<span>News</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="buy.html" class="nav-item">
-									購買通路<span>Buy</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="contact.html" class="nav-item">
-									聯絡我們<span>Contact</span>
-								</a>
-							</li>
-						</ul>
-					</div>
+				<div class="span3 logo-div">
+					<h1><a href="main.html" class="logo-link"><span>Comlink</span></h1></a>
+				</div>
+				<div class="span9">
+					<ul class="unstyled clearfix">
+						<li class="pull-left">
+							<a href="dott_brand.html" class="nav-item">
+								品牌介紹<span>Brand</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="product_list.html" class="nav-item">
+								產品介紹<span>Product</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="news.html" class="nav-item">
+								最新消息<span>News</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="buy.html" class="nav-item">
+								購買通路<span>Buy</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="contact.html" class="nav-item">
+								聯絡我們<span>Contact</span>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 		<div class="main-content">
 			<hr class="dashed-hr margin-bottom-none"></hr>
 			<div class="row">
-				<div class="span3">
+				<div class="span2">
 					<ul class="unstyled sidebar-ul margin-top-40">
 						<li><span><strong>週邊商品</strong></span></li>
 						<li><a href="#">馬克杯</a></li>
@@ -68,7 +68,7 @@
 						<li class="no-border"><a href="#top"><i class="icon-arrow-up"></i>top</a></li>
 					</ul>
 				</div>
-				<div class="span8 left-dash-border">
+				<div class="span9 left-dash-border">
 					<div class="margin-top-20 margin-left-20">
 						<div class="row">
 							<div class="span8"><img src="http://placekitten.com/620/400" /></div>
@@ -106,13 +106,14 @@
 				</div>
 			</div>
 		</div>
+		<hr class="dashed-hr"></hr>
 		<div class="footer clearfix">
 			<div class="row">
 				<div class="span6">
 					電話 (XX) XXXX-XXXX<span>地址 XXX</span><
 				</div>
-				<div class="span4 offset2">
-					版權所有 © 2013 Comlink All Rights Reserved.
+				<div class="span4 offset2 text-right">
+					2013 Comlink All Rights Reserved.
 				</div>
 			</div>
 		</div>
