--- a/brand.html
+++ b/brand.html
@@ -20,37 +20,37 @@
 	<div class="container">
 		<div class="header">
 			<div class="row">
-				<div class="span3"><a href="main.html"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
-				<div class="span9 clearfix">
-					<div class="pull-left">
-						<ul class="unstyled">
-							<li class="pull-left">
-								<a href="dott_brand.html" class="nav-item">
-									品牌介紹<span>Brand</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="product_list.html" class="nav-item">
-									產品介紹<span>Product</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="news.html" class="nav-item">
-									最新消息<span>News</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="buy.html" class="nav-item">
-									購買通路<span>Buy</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="contact.html" class="nav-item">
-									聯絡我們<span>Contact</span>
-								</a>
-							</li>
-						</ul>
-					</div>
+				<div class="span3 logo-div">
+					<h1><a href="main.html" class="logo-link"><span>Comlink</span></h1></a>
+				</div>
+				<div class="span9">
+					<ul class="unstyled clearfix">
+						<li class="pull-left">
+							<a href="dott_brand.html" class="nav-item">
+								品牌介紹<span>Brand</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="product_list.html" class="nav-item">
+								產品介紹<span>Product</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="news.html" class="nav-item">
+								最新消息<span>News</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="buy.html" class="nav-item">
+								購買通路<span>Buy</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="contact.html" class="nav-item">
+								聯絡我們<span>Contact</span>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -107,13 +107,14 @@
 				</div>
 			</div>
 		</div>
+		<hr class="dashed-hr"></hr>
 		<div class="footer clearfix">
 			<div class="row">
 				<div class="span6">
-					電話 (XX) XXXX-XXXX<span>地址 XXX</span>
+					電話 (XX) XXXX-XXXX<span>地址 XXX</span><
 				</div>
-				<div class="span4 offset2">
-					版權所有 © 2013 Comlink All Rights Reserved.
+				<div class="span4 offset2 text-right">
+					2013 Comlink All Rights Reserved.
 				</div>
 			</div>
 		</div>
