--- a/main.html
+++ b/main.html
@@ -20,37 +20,37 @@
 	<div class="container">
 		<div class="header">
 			<div class="row">
-				<div class="span3"><a href="main.html"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
-				<div class="span9 clearfix">
-					<div class="pull-left">
-						<ul class="unstyled">
-							<li class="pull-left">
-								<a href="dott_brand.html" class="nav-item">
-									品牌介紹<span>Brand</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="product_list.html" class="nav-item">
-									產品介紹<span>Product</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="news.html" class="nav-item">
-									最新消息<span>News</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="buy.html" class="nav-item">
-									購買通路<span>Buy</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="contact.html" class="nav-item">
-									聯絡我們<span>Contact</span>
-								</a>
-							</li>
-						</ul>
-					</div>
+				<div class="span3 logo-div">
+					<h1><a href="main.html" class="logo-link"><span>Comlink</span></h1></a>
+				</div>
+				<div class="span9">
+					<ul class="unstyled clearfix">
+						<li class="pull-left">
+							<a href="dott_brand.html" class="nav-item">
+								品牌介紹<span>Brand</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="product_list.html" class="nav-item">
+								產品介紹<span>Product</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="news.html" class="nav-item">
+								最新消息<span>News</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="buy.html" class="nav-item">
+								購買通路<span>Buy</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="contact.html" class="nav-item">
+								聯絡我們<span>Contact</span>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -85,27 +85,28 @@
 			<hr class="dashed-hr"></hr>
 			<div class="row">
 				<div class="span6">
-					<h4>about Comlink</h4>
+					<h3 class="main-h3">關於康利金</h3>
 					<a href="about.html"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
 				</div>
 				<div class="span4 offset2">
-					<h4>where to buy</h4>
-					<div class="row">
-						<div class="span1"><a href="buy.html"><img src="http://placekitten.com/60/50" /></a></div>
-						<div class="span1"><a href="buy.html"><img src="http://placekitten.com/60/50" /></a></div>
-						<div class="span1"><a href="buy.html"><img src="http://placekitten.com/60/50" /></a></div>
-						<div class="span1"><a href="buy.html"><img src="http://placekitten.com/60/50" /></a></div>
-					</div>
+					<h3 class="main-h3">where to buy</h3>
+					<ul class="unstyled clearfix">
+						<li class="pull-left"><a href="buy.html" id="pchome-link" class="buy-link">PC home online</a></li>
+						<li class="pull-left"><a href="buy.html" id="books-link" class="buy-link">books.com.tw</a></li>
+						<li class="pull-left"><a href="buy.html" id="pinkoi-link" class="buy-link">pinkoi</a></li>
+						<li class="pull-left"><a href="buy.html" id="zakka-link" class="buy-link">ZAKKA</a></li>
+					</ul>
 				</div>
 			</div>
 		</div>
+		<hr class="dashed-hr"></hr>
 		<div class="footer clearfix">
 			<div class="row">
 				<div class="span6">
 					電話 (XX) XXXX-XXXX<span>地址 XXX</span><
 				</div>
-				<div class="span4 offset2">
-					版權所有 © 2013 Comlink All Rights Reserved.
+				<div class="span4 offset2 text-right">
+					2013 Comlink All Rights Reserved.
 				</div>
 			</div>
 		</div>
