--- a/product_list.html
+++ b/product_list.html
@@ -20,37 +20,37 @@
 	<div class="container">
 		<div class="header">
 			<div class="row">
-				<div class="span3"><a href="main.html"><img src="http://placekitten.com/220/150" class="img-polaroid"/></a></div>
-				<div class="span9 clearfix">
-					<div class="pull-left">
-						<ul class="unstyled">
-							<li class="pull-left">
-								<a href="dott_brand.html" class="nav-item">
-									品牌介紹<span>Brand</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="product_list.html" class="nav-item">
-									產品介紹<span>Product</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="news.html" class="nav-item">
-									最新消息<span>News</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="buy.html" class="nav-item">
-									購買通路<span>Buy</span>
-								</a>
-							</li>
-							<li class="pull-left">
-								<a href="contact.html" class="nav-item">
-									聯絡我們<span>Contact</span>
-								</a>
-							</li>
-						</ul>
-					</div>
+				<div class="span3 logo-div">
+					<h1><a href="main.html" class="logo-link"><span>Comlink</span></h1></a>
+				</div>
+				<div class="span9">
+					<ul class="unstyled clearfix">
+						<li class="pull-left">
+							<a href="dott_brand.html" class="nav-item">
+								品牌介紹<span>Brand</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="product_list.html" class="nav-item">
+								產品介紹<span>Product</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="news.html" class="nav-item">
+								最新消息<span>News</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="buy.html" class="nav-item">
+								購買通路<span>Buy</span>
+							</a>
+						</li>
+						<li class="pull-left">
+							<a href="contact.html" class="nav-item">
+								聯絡我們<span>Contact</span>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -69,50 +69,107 @@
 					</ul>
 				</div>
 				<div class="span9 left-dash-border">
-					<div class="row margin-top-20 margin-left-10">
-						<div class="span4">
-							<a href="product_dtl.html"><img src="http://placekitten.com/300/250" /></a>
+					<div class="margin-top-20 margin-left-20 clearfix">
+						<div class="pull-left product-list-item-div">
+							<a href="product_dtl.html">
+								<div>冰中劍</div>
+								<img src="http://placekitten.com/300/335" />
+							</a>
 						</div>
-						<div class="span4">
-							<table class="span4"><tbody>
-								<tr>
-									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
-									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
-								</tr>
-								<tr>
-									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
-									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
-								</tr>
-							</tbody></table>
+						<table class="product-list-item-table pull-left"><tbody>
+							<tr>
+								<td>
+									<a href="product_dtl.html" class="product-list-item-s">
+										<div>冰中劍</div>
+										<img src="http://placekitten.com/150/150" />
+									</a>
+								</td>
+								<td>
+									<a href="product_dtl.html" class="product-list-item-s">
+										<div>冰中劍</div>
+										<img src="http://placekitten.com/150/150" />
+									</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="product_dtl.html" class="product-list-item-s">
+										<div>冰中劍</div>
+										<img src="http://placekitten.com/150/150" />
+									</a>
+								</td>
+								<td>
+									<a href="product_dtl.html" class="product-list-item-s">
+										<div>冰中劍</div>
+										<img src="http://placekitten.com/150/150" />
+									</a>
+								</td>
+							</tr>
+						</tbody></table>
+					</div>
+					<div class="margin-top-20 margin-left-20 clearfix">
+						<table class="product-list-item-table pull-left"><tbody>
+							<tr>
+								<td>
+									<a href="product_dtl.html" class="product-list-item-s">
+										<div>冰中劍</div>
+										<img src="http://placekitten.com/150/150" />
+									</a>
+								</td>
+								<td>
+									<a href="product_dtl.html" class="product-list-item-s">
+										<div>冰中劍</div>
+										<img src="http://placekitten.com/150/150" />
+									</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="product_dtl.html" class="product-list-item-s">
+										<div>冰中劍</div>
+										<img src="http://placekitten.com/150/150" />
+									</a>
+								</td>
+								<td>
+									<a href="product_dtl.html" class="product-list-item-s">
+										<div>冰中劍</div>
+										<img src="http://placekitten.com/150/150" />
+									</a>
+								</td>
+							</tr>
+						</tbody></table>
+						<div class="pull-left product-list-item-div">
+							<a href="product_dtl.html">
+								<div>冰中劍</div>
+								<img src="http://placekitten.com/300/335" />
+							</a>
 						</div>
 					</div>
-					<div class="row margin-top-20 margin-left-10">
-						<div class="span4">
-							<table class="span4"><tbody>
-								<tr>
-									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
-									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
-								</tr>
-								<tr>
-									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
-									<td><a href="product_dtl.html"><img src="http://placekitten.com/100/100" /></a></td>
-								</tr>
-							</tbody></table>
-						</div>
-						<div class="span4">
-							<a href="product_dtl.html"><img src="http://placekitten.com/300/150" /></a>
-						</div>
-					</div>
+					<script type="text/javascript">
+						(function($){
+							$(function(){
+								$('.product-list-item-div').hover(
+									function(){ $(this).children().children('div').show();},
+									function(){ $(this).children().children('div').hide();}
+								);
+								$('.product-list-item-s').hover(
+									function(){ $(this).children('div').show();},
+									function(){ $(this).children('div').hide();}
+								);
+							});
+						})(jQuery);
+					</script>
 				</div>
 			</div>
 		</div>
+		<hr class="dashed-hr"></hr>
 		<div class="footer clearfix">
 			<div class="row">
 				<div class="span6">
 					電話 (XX) XXXX-XXXX<span>地址 XXX</span><
 				</div>
-				<div class="span4 offset2">
-					版權所有 © 2013 Comlink All Rights Reserved.
+				<div class="span4 offset2 text-right">
+					2013 Comlink All Rights Reserved.
 				</div>
 			</div>
 		</div>
