product-dtl以及main頁收尾完成

--- a/buy.html
+++ b/buy.html
@@ -62,10 +62,10 @@
 					</div>
 					<div class="span8">
 						<div class="row">
-							<div class="span2"><a href="#"><img src="http://placekitten.com/140/127" /></a></div>
-							<div class="span2"><a href="#"><img src="http://placekitten.com/140/127" /></a></div>
-							<div class="span2"><a href="#"><img src="http://placekitten.com/140/127" /></a></div>
-							<div class="span2"><a href="#"><img src="http://placekitten.com/140/127" /></a></div>
+							<div class="span2"><a href="#" id="pchome-link" class="buy-link-b">PC home online</a></div>
+							<div class="span2"><a href="#" id="books-link" class="buy-link-b">books.com.tw</a></div>
+							<div class="span2"><a href="#" id="pinkoi-link" class="buy-link-b">pinkoi</a></div>
+							<div class="span2"><a href="#" id="zakka-link" class="buy-link-b">ZAKKA</a></div>
 						</div>
 					</div>
 				</div>
