--- a/product_dtl.html
+++ b/product_dtl.html
@@ -58,52 +58,33 @@
 			<hr class="dashed-hr"></hr>
 				<div class="row">
 					<div class="span2">
-						<ul class="unstyled">
-							<li class="margin-bottom-10"><img src="http://placekitten.com/220/150" /></li>
-							<li class="margin-bottom-10"><img src="http://placekitten.com/220/150" /></li>
-							<li class="margin-bottom-10"><img src="http://placekitten.com/220/150" /></li>
+						<div class="product-dtl-smallpic"><a href="#"><img src="http://placekitten.com/140/95" /></a></div>
+						<div class="product-dtl-smallpic"><a href="#"><img src="http://placekitten.com/140/95" /></a></div>
+						<div class="product-dtl-smallpic"><a href="#"><img src="http://placekitten.com/140/95" /></a></div>
 					</div>
 					<div class="span6">
 						<img src="http://placekitten.com/460/320" />
 					</div>
 					<div class="span4">
-						<h3>產品名稱</h3>
-						<ul class="unstyled">
-							<li>尺寸</li>
-							<li>規格</li>
-							<li>規格</li>
+						<h3 class="product-dtl-h3">附點杯墊</h3>
+						<ul class="unstyled product-dtl-ul">
+							<li>尺寸<span>110X110X70</span></li>
+							<li>規格<span>14款</span></li>
 						</ul>
-						<div class="clearfix">
-							<span>where to buy</span>
-							<ul class="unstyled">
-								<li class="pull-left margin-right-10"><a href="buy.html"><img src="http://placekitten.com/65/65" /></a></li>
-								<li class="pull-left margin-right-10"><a href="buy.html"><img src="http://placekitten.com/65/65" /></a></li>
-								<li class="pull-left margin-right-10"><a href="buy.html"><img src="http://placekitten.com/65/65" /></a></li>
-								<li class="pull-left margin-right-10"><a href="buy.html"><img src="http://placekitten.com/65/65" /></a></li>
-							</ul>
+						<div>
+							<h3>where to buy</h3>
+							<a href="buy.html" id="pchome-link" class="product-dtl-buy-link"></a>
+							<a href="buy.html" id="books-link" class="product-dtl-buy-link"></a>
+							<a href="buy.html" id="pinkoi-link" class="product-dtl-buy-link"></a>
+							<a href="buy.html" id="zakka-link" class="product-dtl-buy-link"></a>
 						</div>
 					</div>
 				</div>
 			<hr class="dashed-hr"></hr>
-			<p>無也層時負市深的心部來被次氣醫度前我一濟以天，眼我去！的上常外該人發生跟以樣以全熱們公時人，是加和片一會了影動一改笑不她，遊腦家所很景、話旅電之來！名能定</p>
-			<textarea class="span12"></textarea>
-			<p>無也層時負市深的心部來被次氣醫度前我一濟以天，眼我去！的上常外該；兩熱年；動目早像雨訴所。不仍的水，斯精另方上從他；試古看於不有病品南代也龍知所究出</p>
-			<strong>Message</strong>
-			<hr class="dashed-hr"></hr>
-			<div class="row">
-				<div class="span2"><img src="http://placekitten.com/140/127" /></div>
-				<div class="span10">
-					<span>XXX</span>
-					<p>氣醫度前我一濟以天，眼我去！的上常外該；兩熱年；動目早像雨訴所。不仍的水，斯精另方上從他；試古看於不有病品南代也龍知所</p>
-				</div>
-			</div>
-			<hr class="dashed-hr"></hr>
-			<div class="row">
-				<div class="span2"><img src="http://placekitten.com/140/127" /></div>
-				<div class="span10">
-					<span>XXX</span>
-					<p>氣醫度前我一濟以天，眼我去！的上常外該；兩熱年；動目早像雨訴所。不仍的水，斯精另方上從他；試古看於不有病品南代也龍知所</p>
-				</div>
+			<img src="http://placekitten.com/940/250">
+			<div class="product-dtl-content-div">
+				氣醫度前我一濟以天，眼我去！的上常外該；兩熱年；動目早像雨訴所。不仍的水，斯精另方上從他；試古看於不有病品南代也龍知所<br />
+				氣醫度前我一濟以天，眼我去！的上常外該；兩熱年；動目早像雨訴所。不仍的水，斯精另方上從他；試古看於不有病品南代也龍知所
 			</div>
 		</div>
 		<hr class="dashed-hr"></hr>
